--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,15 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+  --font-display: "Plus Jakarta Sans", sans-serif;
+  --font-geist-sans: "Geist", sans-serif;
+  --font-geist-mono: "Geist Mono", monospace;
+
+  --color-primary: #92ec13;
+  --color-background-light: #f7f8f6;
+  --color-background-dark: #1a2210;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
